# synapsis

./: .gitignore  .mcp.json  AGENTS.md  GROK.md  Library  README.md  plugin.json  pyproject.toml
.github/ISSUE_TEMPLATE/: synapsis-problem.yml
.github/workflows/: ci.yml
.grok/: config.toml
.grok/hooks/: synapsis-hygiene.json  synapsis-hygiene.py
.grok/rules/: 00-synapsis-discipline.md  01-git-workflow-discipline.md
.grok/skills/handoff/: SKILL.md
.grok/skills/metis/: SKILL.md  persona.md
.grok/skills/proteo/: SKILL.md  persona.md
.grok/skills/synapsis/: SKILL.md
Documents/: synapsis-commands.md
Documents/examples/: escalation.md  synapsis-config.yaml
SOPs/: SYN-SOP-001-sop-format.md  SYN-SOP-002-project-convention.md
hooks/: hooks.json
plans/: T-GH-001-escalation-gaps-plan.md  vault-setup-automation-001.md
scripts/: vault-check.sh  vault-doctor.sh  vault-mount.sh  vault-reindex.sh  vault-unmount.sh
test-prompts/: grokmd-test-prompt.txt
tools/common/: __init__.py  config.py  paths.py
tools/knowledge_base/: __init__.py  chunk_indexer.py  entity_dictionary.yaml  entity_extractor.py  grep_engine.py  heading_chunker.py  main.py  rrf_fusion.py  server.py  vector_indexer.py
tools/knowledge_base/tests/: __init__.py  test_chunk_indexer.py  test_entity_extractor.py  test_heading_chunker.py  test_integration.py
tools/knowledge_base/tests/fixtures/: sample.md
tools/llm/: __init__.py  __main__.py  batch.py  cli.py  config.py  image_client.py  image_processor.py  interactive.py  requirements.txt
tools/llm/providers/: __init__.py  base.py  gemini.py  grok.py  openrouter.py
tools/synapsis/: __init__.py  __main__.py  cli.py  hf.py  models.py  report.py  server.py  store.py  test_search.py  test_self_healing.py  test_store.py  test_tools.py
