[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapsis"
version = "0.1.0"
description = "Synapsis: unified durable team memory MCP (sessions, tasks, handoffs, knowledge search) + multi-provider LLM client. Designed for Grok Build and agentic workflows."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "tensor-mill"}
]
dependencies = [
    # Core for Synapsis MCP + store
    "mcp>=1.27.1",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tenacity>=8.3",

    # LLM client (multi-provider)
    "openai>=1.0",
    "google-genai>=1.0",
    "xai-sdk>=0.1",
    "httpx>=0.27",

    # CLI / UX (used by the tools)
    "typer>=0.15",
    "rich>=13.7",

    # Misc shared
    "markdown>=3.10.2",
    # Progress for chunk_indexer CLI (knowledge reindex of Library/). Lightweight + required for documented UX.
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
]
embeddings = [
    # For full hybrid / embedding search in knowledge mode (lazy imported)
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.9",
]
full = [
    # Brings in more of the original ecosystem if you want Token Juice etc.
    "watchdog>=4.0",
    "pathspec>=0.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[project.scripts]
# Convenience entry points (optional)
synapsis = "tools.synapsis.__main__:main"
llm = "tools.llm.__main__:main"

# Ruff + format settings (kept close to original for consistency)
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
